website/static/css/custom.css
/**
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/* General elements */

a {
	color: #ff30a0;
}

/* Header elements */

.mainContainer .wrapper .post .postHeaderTitle {
    margin-top: 10px;
}
.toc .toggleNav ul li a {
    font-size: 15px;
    padding: 2px 0;

}
.fixedHeaderContainer {
    border-bottom: 3px solid #ff30a0;
}
.toc .toggleNav .navGroup .navGroupCategoryTitle {
    font-size: 17px;
    color: #22292f;
}

/* Sidebar elements */

.onPageNav a:hover {
    color: #ff30a0;
}
.toc .toggleNav ul li a:hover {
    color: #ff30a0;

}
.toc .toggleNav ul li.navListItemActive a {
    color: #22292f;
    font-weight: 600;
}



@media only screen and (min-device-width: 360px) and (max-device-width: 736px) {
}

@media only screen and (min-width: 1024px) {
}

@media only screen and (max-width: 1023px) {
}

@media only screen and (min-width: 1400px) {
}

@media only screen and (min-width: 1500px) {
}

